--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,1 +1,29 @@
-<p>admin works!</p>
+<div class="container-fluid">
+  <header class="header bg-success text-white d-flex justify-content-between">
+    <h1 class="header-title">DashBoard Center</h1>
+    <button class="btn btn-danger btn-sm" (click)="logOut()">Logout</button>
+  </header>
+  <div class="row">
+    <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
+      <div class="position-sticky">
+        <ul class="nav flex-column">
+          <li class="nav-item">
+            <a href="" class="nav-link">
+              <i class="fab fa-first-order icon"></i> Orders
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link"> 
+              <i class="fab fa-canadian-maple-leaf icon"></i>Categories
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">
+              <i class="fab fa-codepen icon"></i>Products
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+</div>
