a little tab order

--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -8,7 +8,7 @@
       <div class="position-sticky">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a href="" class="nav-link">
+            <a href="" class="nav-link" [routerLink]="['/admin/orders']">
               <i class="fab fa-first-order icon"></i> Orders
             </a>
           </li>
